--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,26 @@ body {
   font-family: Arial;
   background-image: url('../img/fundo.jpg');
   background-size: auto 100vh;
-  height: 100vh;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 10px
+}
+
+@media (min-width: 400px) {
+  body {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 800px) {
+  body{
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 1200px) {
+  body{
+   font-size: 18px; 
+  }
 }
 
 header {
@@ -24,6 +43,7 @@ header {
   position: fixed;
   width: 100vw;
   top: 0;
+  z-index: 1;
 }
 
 .menu ul {
@@ -44,21 +64,184 @@ a:hover {
   text-decoration: underline;
 }
 
+.titles {
+  transform: scale(0.2) translateY(50vh);
+  opacity: 0;
+
+  animation: linear 2s animationTitle forwards;
+}
+
+@keyframes animationTitle {
+  100% {
+    transform: scale(1) translate(0);
+    opacity: 1;
+  }
+}
+
 .menu a {
   padding: 10px 20px;
   display: block;
+  transition: background-color 0.5s,color 1s;
+}
+
+.menu a:hover {
+  background-color: teal;
+  color: white;
 }
 
 .site-title, .site-subtitle {
   color: whitesmoke;
   text-align: center;
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
+h1.site-title {
+    font-size: 4em;
 }
 
 .site-subtitle {
   font-style: italic;
+  font-family: 'Gloria Hallelujah', cursive;
+  line-height: 1.8em;
+}
+
+.sobre,
+.contato,
+.portifolio {
+  padding: 2em;
+  min-height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 1200px) {
+  .sobre,
+  .contato,
+  .portifolio {
+    margin: 120px;
+  }
+}
+
+.sobre h2,
+.contato h2, 
+.portifolio h2{
+  font-family: 'Source Code Pro', monospace;
+  color: whitesmoke;
+  margin: 1.5em;
+  font-size: 2em;
+  text-shadow: -6px 4px black;
+  box-shadow: -6px 10px black;
+  color: red;
+  background-color: #5f0d0d;
+}
+
+.sobre p {
+  color:  white;
+  margin-bottom: 1.4em;
+  text-indent: 1.4em;
+  text-align: justify;
+  font-size: 1.4em;
+}
+
+.sobre a {
+  color: yellowgreen;
+}
+
+.sobre figure img {
+  float: right;
+  margin-left: 2em;
+  border-radius: 20%;
+  height: 20em;
+}
+
+.portifolio .grid {
+  display: grid;
+  gap: 2em;
+  justify-content: center;
+}
+
+@media (min-width: 560px) {
+  .portifolio .grid {
+    grid-template-columns: 240px 240px;
+  }
+}
+
+@media (min-width: 880px) {
+  .portifolio .grid {
+    grid-template-columns: 240px 240px 240px;
+    justify-content: center;
+    align-content: center;
+    height: calc(100vh - 4em - 48px - 1.5em);
+  }
+}
+
+.portifolio figure {
+  text-align: center;
 }
 
 .img-portfolio {
   height: 180px;
-  width: 180px;
+  width: 100%;
+  object-fit: cover;
+  object-position: left bottom;
+  transition: transform 500ms;
+}
+
+.portifolio figcaption {
+  font-size: 1.5em;
+}
+
+/* .img-portfolio:hover {
+  transform: scale(1.2) ;
+} */
+
+.flip-card {
+  perspective: 500px;
+}
+
+.flip-card:hover .card {
+  transform: rotateY(180deg);
+}
+
+.card {
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+
+.card-front,
+.card-back {
+  backface-visibility: hidden;
+  position: absolute;
+}
+
+.card-back {
+  background-color: white;
+  height: 180px;
+  width: 100%;
+  transform: rotateY(180deg);
+}
+
+.contato .icons{
+  text-align: center;
+}
+
+.contato a {
+    color: whitesmoke;
+    font-size: 8em;
+    transition: text-shadow 1s, color 1.5s;
+}
+
+.contato a:active,
+.contato a:hover {
+    color: black;
+    text-shadow: 0px 0px 10px rgba(255,255,255,0.5);
+    text-decoration: none;
+}
+
+@media (min-width: 1200px) {
+  .img-portfolio {
+    height: auto;
+    width: 100%;
+  }
 }
